[package]
name = "gamevote"
version = "0.1.0"
edition = "2021"

[dependencies]
tallystick = {version = "0.4.3", features = ["nightly"]}
serenity = {version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "cache", "utils"] }
tokio =  {version = "1", features = ["macros", "rt-multi-thread"]}